# dfts-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
dfts/: cli.py  hash.py  merkle.py  proof.py
tests/: test_merkle.py
