[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dfts"
version = "1.0.0"
description = "Digital File Trust System - A decentralized timestamping tool for Bitcoin."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kiran Tej", email = "contact@kirantej.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
    "bit>=0.8.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "htstps://github.com/kirantej/dft"
"Bug Tracker" = "https://github.com/kirantej/dfts/issues"

[project.scripts]
dfts = "dfts.cli:main"

[tool.setuptools.packages.find]
include = ["dfts*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]
